--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="carousel-item active">
                 <img src="./pictures/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Welcome to iCoder</h2>
+                    <h2>Welcome to Ankush iCoder</h2>
                     <p>Technology News, Web Devlpoment and Trends</p>
                     <a href="./Technology.html">
                         <button class="btn btn-danger">Technology</button></a>
